--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ python = "^3.9"
 typer = "^0.9.0"
 requests = "^2.31.0"
 pandas = "^2.2.0"
+pytest = "^7.0.0"
+pytest-cov = "^4.0.0"
 
 [tool.poetry.scripts]
 get-papers-list = "pubmed_scraper.cli:cli_entry_point"
